--- a/index.html
+++ b/index.html
@@ -145,189 +145,8 @@
     </section>
   </div>
 
-  <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      // Theme persistence
-      const savedTheme = localStorage.getItem('theme');
-      if (savedTheme === 'dark') document.body.classList.add('dark');
+<script src="script.js"></script>
 
-      const el = {
-        toggleTheme: document.getElementById('toggleTheme'),
-        btnHistorico: document.getElementById('btnHistorico'),
-        mesSelecionado: document.getElementById('mesSelecionado'),
-        dinheiroGuardado: document.getElementById('dinheiroGuardado'),
-        // Receita
-        valorReceita: document.getElementById('valorReceita'),
-        fonteReceita: document.getElementById('fonteReceita'),
-        dataReceita: document.getElementById('dataReceita'),
-        btnAddReceita: document.getElementById('btnAddReceita'),
-        tabelaReceitasBody: document.getElementById('tabelaReceitas').querySelector('tbody'),
-        // Despesa
-        valorDespesa: document.getElementById('valorDespesa'),
-        categoriaDespesa: document.getElementById('categoriaDespesa'),
-        descricaoDespesa: document.getElementById('descricaoDespesa'),
-        dataDespesa: document.getElementById('dataDespesa'),
-        btnAddDespesa: document.getElementById('btnAddDespesa'),
-        tabelaDespesasBody: document.getElementById('tabelaDespesas').querySelector('tbody'),
-        // Resumo
-        totalReceitas: document.getElementById('totalReceitas'),
-        totalDespesas: document.getElementById('totalDespesas'),
-        saldoRestante: document.getElementById('saldoRestante'),
-        saldoGuardado: document.getElementById('saldoGuardado'),
-        // Ações
-        btnSalvarMes: document.getElementById('btnSalvarMes'),
-        btnLimparAtual: document.getElementById('btnLimparAtual'),
-      };
-
-      let receitas = [];
-      let despesas = [];
-      let nextId = 1;
-
-      const brl = (n) => (n || 0).toLocaleString('pt-BR', { style: 'currency', currency: 'BRL' });
-      const formatDate = (value) => {
-        if (!value) return '';
-        const d = new Date(value + 'T00:00:00');
-        return d.toLocaleDateString('pt-BR');
-      };
-      const monthKey = (inputMonth) => {
-        // input type="month" → "YYYY-MM"
-        if (!inputMonth) return '';
-        const [y, m] = inputMonth.split('-');
-        const nomes = ['Janeiro','Fevereiro','Março','Abril','Maio','Junho','Julho','Agosto','Setembro','Outubro','Novembro','Dezembro'];
-        return `${nomes[Number(m)-1]} ${y}`;
-      };
-
-      function renderReceitas() {
-        el.tabelaReceitasBody.innerHTML = receitas.map(r => `
-          <tr data-id="${r.id}">
-            <td>${brl(r.valor)}</td>
-            <td>${r.fonte}</td>
-            <td>${formatDate(r.data)}</td>
-            <td><button class="rem-receita" data-id="${r.id}">🗑️</button></td>
-          </tr>
-        `).join('');
-      }
-      function renderDespesas() {
-        el.tabelaDespesasBody.innerHTML = despesas.map(d => `
-          <tr data-id="${d.id}">
-            <td>${brl(d.valor)}</td>
-            <td>${d.categoria}</td>
-            <td>${d.descricao || '-'}</td>
-            <td>${formatDate(d.data)}</td>
-            <td><button class="rem-despesa" data-id="${d.id}">🗑️</button></td>
-          </tr>
-        `).join('');
-      }
-      function resumo() {
-        const totalR = receitas.reduce((acc, r) => acc + (Number(r.valor) || 0), 0);
-        const totalD = despesas.reduce((acc, d) => acc + (Number(d.valor) || 0), 0);
-        const guardado = parseFloat(el.dinheiroGuardado.value) || 0;
-        el.totalReceitas.textContent = brl(totalR);
-        el.totalDespesas.textContent = brl(totalD);
-        el.saldoRestante.textContent = brl(totalR - totalD);
-        el.saldoGuardado.textContent = brl(guardado);
-      }
-
-      function resetReceitaInputs() {
-        el.valorReceita.value = ''; el.fonteReceita.value = ''; el.dataReceita.value = '';
-      }
-      function resetDespesaInputs() {
-        el.valorDespesa.value = ''; el.categoriaDespesa.value = ''; el.descricaoDespesa.value = ''; el.dataDespesa.value = '';
-      }
-      function limparPagina() {
-        receitas = []; despesas = []; nextId = 1;
-        el.dinheiroGuardado.value = '';
-        renderReceitas(); renderDespesas(); resumo();
-      }
-
-      // Add receita
-      el.btnAddReceita.addEventListener('click', () => {
-        const valor = parseFloat(el.valorReceita.value);
-        const fonte = (el.fonteReceita.value || '').trim();
-        const data = el.dataReceita.value;
-        if (!valor || valor <= 0 || !fonte || !data) {
-          alert('Preencha valor, fonte e data da entrada.');
-          return;
-        }
-        receitas.push({ id: nextId++, valor, fonte, data });
-        renderReceitas(); resumo(); resetReceitaInputs();
-      });
-
-      // Add despesa (descrição opcional)
-      el.btnAddDespesa.addEventListener('click', () => {
-        const valor = parseFloat(el.valorDespesa.value);
-        const categoria = (el.categoriaDespesa.value || '').trim();
-        const descricao = (el.descricaoDespesa.value || '').trim();
-        const data = el.dataDespesa.value;
-        if (!valor || valor <= 0 || !categoria || !data) {
-          alert('Preencha valor, categoria e data da despesa.');
-          return;
-        }
-        despesas.push({ id: nextId++, valor, categoria, descricao, data });
-        renderDespesas(); resumo(); resetDespesaInputs();
-      });
-
-      // Remove receita/despesa
-      el.tabelaReceitasBody.addEventListener('click', (e) => {
-        const btn = e.target.closest('.rem-receita'); if (!btn) return;
-        const id = Number(btn.dataset.id);
-        receitas = receitas.filter(r => r.id !== id);
-        renderReceitas(); resumo();
-      });
-      el.tabelaDespesasBody.addEventListener('click', (e) => {
-        const btn = e.target.closest('.rem-despesa'); if (!btn) return;
-        const id = Number(btn.dataset.id);
-        despesas = despesas.filter(d => d.id !== id);
-        renderDespesas(); resumo();
-      });
-
-      // Save month
-      el.btnSalvarMes.addEventListener('click', () => {
-        const mKey = monthKey(el.mesSelecionado.value);
-        if (!mKey) { alert('Selecione o mês antes de salvar.'); return; }
-        const guardado = parseFloat(el.dinheiroGuardado.value) || 0;
-        const payload = { receitas, despesas, guardado, salvoEm: new Date().toISOString() };
-
-        const histRaw = localStorage.getItem('financeHistory');
-        const hist = histRaw ? JSON.parse(histRaw) : {};
-        hist[mKey] = payload;
-        localStorage.setItem('financeHistory', JSON.stringify(hist));
-
-        limparPagina(); // prepara página para próximo mês
-        window.location.href = 'historico.html';
-      });
-
-      // Limpar página atual (sem salvar)
-      el.btnLimparAtual.addEventListener('click', limparPagina);
-
-      // Ver histórico
-      el.btnHistorico.addEventListener('click', () => {
-        window.location.href = 'historico.html';
-      });
-
-      // Dinheiro guardado muda resumo
-      el.dinheiroGuardado.addEventListener('input', resumo);
-
-      // Theme toggle
-      el.toggleTheme.addEventListener('click', () => {
-        document.body.classList.toggle('dark');
-        localStorage.setItem('theme', document.body.classList.contains('dark') ? 'dark' : 'light');
-      });
-
-      // Prefill current month
-      const today = new Date();
-      const ym = `${today.getFullYear()}-${String(today.getMonth()+1).padStart(2,'0')}`;
-      el.mesSelecionado.value = ym;
-
-      // Init
-      renderReceitas(); renderDespesas(); resumo();
-    });
-    if ("serviceWorker" in navigator) {
-  navigator.serviceWorker.register("service-worker.js")
-    .then(() => console.log("Service Worker registrado com sucesso"))
-    .catch(err => console.log("Erro no Service Worker:", err));
-}
-
-  </script>
 </body>
 </html>
+
