--- a/historico.html
+++ b/historico.html
@@ -11,6 +11,17 @@
       --primary:#4CAF50; --primary-hover:#45a049;
       --card:#ffffff; --border:#e5e5e5;
     }
+    .link-btn {
+  background: #fff;
+  color: var(--primary);
+  border: 2px solid var(--primary);
+  margin-left: 8px;
+}
+
+.link-btn:hover {
+  background: var(--primary);
+  color: #fff;
+}
     body { margin:0; font-family:system-ui,-apple-system,'Inter',Arial,sans-serif; background:var(--bg); color:var(--text); }
     header { display:flex; justify-content:space-between; align-items:center; padding:16px 20px; background:var(--primary); color:#fff; }
     header h1 { margin:0; font-size:1.3rem; }
@@ -57,3 +68,4 @@
 </body>
 
 </html>
+
