--- a/index.html
+++ b/index.html
@@ -122,6 +122,21 @@
         </thead>
         <tbody></tbody>
       </table>
+      <div class="card">
+  <h3>Visualização</h3>
+  <select id="tipoVisualizacao">
+    <option value="tabela">📋 Tabela</option>
+    <option value="pizza">🍕 Gráfico de Pizza</option>
+    <option value="barras">📊 Gráfico de Barras</option>
+  </select>
+</div>
+<div class="card" id="areaTabela">
+  <!-- TABELAS JÁ EXISTENTES -->
+</div>
+
+<div class="card" id="areaGrafico" style="display:none">
+  <canvas id="grafico" height="220"></canvas>
+</div>
 
       <h2 style="margin-top:16px;">Despesas</h2>
       <table id="tabelaDespesas">
@@ -145,8 +160,11 @@
     </section>
   </div>
 
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="script.js"></script>
+
 
 </body>
 </html>
+
 
