--- a/index.html
+++ b/index.html
@@ -1,170 +1,83 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Controle de Gastos Mensais</title>
-  <link rel="manifest" href="manifest.json">
-<meta name="theme-color" content="#4CAF50">
+  <meta charset="UTF-8">
+  <title>Controle Financeiro</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" href="icon.png">
   <style>
-    * { box-sizing: border-box; }
-    :root {
-      --bg: #f9f9f9; --text: #222; --muted: #666;
-      --primary: #4CAF50; --primary-hover: #45a049;
-      --card: #ffffff; --border: #e5e5e5;
-    }
-    body { margin: 0; font-family: system-ui, -apple-system, 'Inter', Arial, sans-serif; background: var(--bg); color: var(--text); }
-    header { display: flex; align-items: center; justify-content: space-between; padding: 16px 20px; background: var(--primary); color: #fff; }
-    header h1 { margin: 0; font-size: 1.4rem; }
-    .container { max-width: 1100px; margin: 24px auto; padding: 0 16px; }
-    section { background: var(--card); border: 1px solid var(--border); border-radius: 12px; padding: 16px; margin-bottom: 16px; }
-    section h2 { margin: 0 0 12px; color: var(--muted); font-size: 1.1rem; }
-    .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); gap: 12px; }
-    label { display: block; font-size: 0.9rem; margin-bottom: 6px; color: var(--muted); }
-    input, select { width: 100%; padding: 10px 12px; border: 1px solid #ccc; border-radius: 10px; background: #fff; color: var(--text); font-size: 0.95rem; }
-    input:focus, select:focus { outline: none; border-color: var(--primary); background: #f3fdf5; }
-    .actions { display: flex; gap: 10px; flex-wrap: wrap; margin-top: 10px; }
-    button { padding: 10px 14px; border: none; border-radius: 10px; background: var(--primary); color: #fff; font-weight: 600; cursor: pointer; }
-    button:hover { background: var(--primary-hover); }
-    table { width: 100%; border-collapse: collapse; margin-top: 10px; }
-    th, td { border: 1px solid #ddd; padding: 10px; text-align: center; font-size: 0.95rem; }
-    th { background: var(--primary); color: #fff; }
-    tbody tr:nth-child(even) { background: #f6f6f6; }
-    .summary p { margin: 6px 0; font-size: 1rem; }
-    .toolbar { display: flex; gap: 10px; align-items: center; }
-    .link-btn { background: #fff; color: var(--primary); border: 2px solid var(--primary); }
-    .link-btn:hover { background: var(--primary); color: #fff; }
-    /* Dark mode */
-    body.dark { --bg: #121212; --text: #e0e0e0; --muted: #bdbdbd; --primary: #81C784; --primary-hover: #66BB6A; --card: #1e1e1e; --border: #2a2a2a; }
-    body.dark input, body.dark select { background: #1a1a1a; color: #e0e0e0; border-color: #3a3a3a; }
-    body.dark table th { background: #2a2a2a; color: var(--primary); }
-    body.dark tbody tr:nth-child(even) { background: #181818; }
-    body.dark tbody tr:nth-child(odd) { background: #202020; }
-    /* Transitions */
-    body, header, section, input, select, button, table, th, td { transition: background-color 0.25s, color 0.25s, border-color 0.25s; }
+    body { font-family: system-ui; margin:0; background:#f9f9f9; }
+    body.dark { background:#121212; color:#e0e0e0; }
+    header { background:#4CAF50; color:#fff; padding:15px; display:flex; justify-content:space-between; }
+    button, select, input { padding:8px; border-radius:8px; }
+    .container { max-width:1100px; margin:auto; padding:16px; }
+    .card { background:#fff; padding:16px; border-radius:12px; margin-bottom:16px; }
+    body.dark .card { background:#1e1e1e; }
+    table { width:100%; border-collapse:collapse; }
+    th,td { border:1px solid #ccc; padding:8px; text-align:center; }
+    th { background:#4CAF50; color:#fff; }
   </style>
 </head>
+
 <body>
-  <header>
-    <h1>💰 Controle de Gastos Mensais</h1>
-    <div class="toolbar">
-      <button id="btnHistorico" class="link-btn" type="button">Ver histórico</button>
-      <button id="toggleTheme" type="button">Alternar tema</button>
-    </div>
-  </header>
+<header>
+  <strong>Controle Financeiro</strong>
+  <div>
+    <button id="btnHistorico">📚 Histórico</button>
+    <button id="toggleTheme">🌙 Tema</button>
+  </div>
+</header>
 
-  <div class="container">
-    <section>
-      <h2>Configurações do mês</h2>
-      <div class="grid">
-        <div>
-          <label for="mesSelecionado">Selecione o mês</label>
-          <input type="month" id="mesSelecionado" />
-        </div>
-        <div>
-          <label for="dinheiroGuardado">Dinheiro guardado (R$)</label>
-          <input type="number" id="dinheiroGuardado" placeholder="0,00" step="0.01" min="0" />
-        </div>
-      </div>
-    </section>
+<div class="container">
 
-    <section>
-      <h2>Adicionar entrada</h2>
-      <div class="grid">
-        <div>
-          <label for="valorReceita">Valor</label>
-          <input type="number" id="valorReceita" placeholder="0,00" step="0.01" min="0" />
-        </div>
-        <div>
-          <label for="fonteReceita">Fonte</label>
-          <input type="text" id="fonteReceita" placeholder="Ex: Salário, Freelancer" />
-        </div>
-        <div>
-          <label for="dataReceita">Data</label>
-          <input type="date" id="dataReceita" />
-        </div>
-      </div>
-      <div class="actions">
-        <button id="btnAddReceita" type="button">Adicionar entrada</button>
-      </div>
-    </section>
-
-    <section>
-      <h2>Adicionar despesa</h2>
-      <div class="grid">
-        <div>
-          <label for="valorDespesa">Valor</label>
-          <input type="number" id="valorDespesa" placeholder="0,00" step="0.01" min="0" />
-        </div>
-        <div>
-          <label for="categoriaDespesa">Categoria</label>
-          <input type="text" id="categoriaDespesa" placeholder="Ex: Aluguel, Mercado" />
-        </div>
-        <div>
-          <label for="descricaoDespesa">Descrição (opcional)</label>
-          <input type="text" id="descricaoDespesa" placeholder="Ex: Detalhes da compra" />
-        </div>
-        <div>
-          <label for="dataDespesa">Data</label>
-          <input type="date" id="dataDespesa" />
-        </div>
-      </div>
-      <div class="actions">
-        <button id="btnAddDespesa" type="button">Adicionar despesa</button>
-      </div>
-    </section>
-
-    <section>
-      <h2>Entradas</h2>
-      <table id="tabelaReceitas">
-        <thead>
-          <tr><th>Valor</th><th>Fonte</th><th>Data</th><th>Ações</th></tr>
-        </thead>
-        <tbody></tbody>
-      </table>
-      <div class="card">
-  <h3>Visualização</h3>
-  <select id="tipoVisualizacao">
-    <option value="tabela">📋 Tabela</option>
-    <option value="pizza">🍕 Gráfico de Pizza</option>
-    <option value="barras">📊 Gráfico de Barras</option>
-  </select>
-</div>
-<div class="card" id="areaTabela">
-  <!-- TABELAS JÁ EXISTENTES -->
-</div>
-
-<div class="card" id="areaGrafico" style="display:none">
-  <canvas id="grafico" height="220"></canvas>
-</div>
-
-      <h2 style="margin-top:16px;">Despesas</h2>
-      <table id="tabelaDespesas">
-        <thead>
-          <tr><th>Valor</th><th>Categoria</th><th>Descrição</th><th>Data</th><th>Ações</th></tr>
-        </thead>
-        <tbody></tbody>
-      </table>
-    </section>
-
-    <section class="summary">
-      <h2>Resumo financeiro</h2>
-      <p><strong>Total de entradas:</strong> <span id="totalReceitas">R$ 0,00</span></p>
-      <p><strong>Total de despesas:</strong> <span id="totalDespesas">R$ 0,00</span></p>
-      <p><strong>Saldo restante:</strong> <span id="saldoRestante">R$ 0,00</span></p>
-      <p><strong>Dinheiro guardado:</strong> <span id="saldoGuardado">R$ 0,00</span></p>
-      <div class="actions" style="margin-top:12px;">
-        <button id="btnSalvarMes" type="button">Salvar mês e ir para histórico</button>
-        <button id="btnLimparAtual" class="link-btn" type="button">Limpar página</button>
-      </div>
-    </section>
+  <div class="card">
+    <label>Mês:</label>
+    <input type="month" id="mesSelecionado">
+    <label>Dinheiro guardado:</label>
+    <input type="number" id="dinheiroGuardado">
   </div>
 
+  <div class="card">
+    <h3>Entradas</h3>
+    <input id="valorReceita" type="number" placeholder="Valor">
+    <input id="fonteReceita" placeholder="Fonte">
+    <input id="dataReceita" type="date">
+    <button id="btnAddReceita">Adicionar</button>
+    <table id="tabelaReceitas">
+      <tbody></tbody>
+    </table>
+  </div>
+
+  <div class="card">
+    <h3>Despesas</h3>
+    <input id="valorDespesa" type="number" placeholder="Valor">
+    <input id="categoriaDespesa" placeholder="Categoria">
+    <input id="descricaoDespesa" placeholder="Descrição">
+    <input id="dataDespesa" type="date">
+    <button id="btnAddDespesa">Adicionar</button>
+    <table id="tabelaDespesas">
+      <tbody></tbody>
+    </table>
+  </div>
+
+  <div class="card">
+    <h3>Visualização</h3>
+    <select id="tipoVisualizacao">
+      <option value="tabela">📋 Tabela</option>
+      <option value="pizza">🍕 Pizza</option>
+      <option value="barras">📊 Barras</option>
+    </select>
+    <canvas id="grafico" height="200" style="display:none"></canvas>
+  </div>
+
+  <div class="card">
+    <button id="btnSalvarMes">💾 Salvar mês</button>
+    <button id="btnLimparAtual">🧹 Limpar</button>
+  </div>
+
+</div>
+
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script src="script.js"></script>
-
-
+<script src="js/index.js"></script>
 </body>
 </html>
-
-
