--- a/index.html
+++ b/index.html
@@ -1,25 +1,64 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <title>Controle Financeiro</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" href="icon.png">
-  <style>
-    body { font-family: system-ui; margin:0; background:#f9f9f9; }
-    body.dark { background:#121212; color:#e0e0e0; }
-    header { background:#4CAF50; color:#fff; padding:15px; display:flex; justify-content:space-between; }
-    button, select, input { padding:8px; border-radius:8px; }
-    .container { max-width:1100px; margin:auto; padding:16px; }
-    .card { background:#fff; padding:16px; border-radius:12px; margin-bottom:16px; }
-    body.dark .card { background:#1e1e1e; }
-    table { width:100%; border-collapse:collapse; }
-    th,td { border:1px solid #ccc; padding:8px; text-align:center; }
-    th { background:#4CAF50; color:#fff; }
-  </style>
+<meta charset="UTF-8">
+<title>Controle Financeiro</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<style>
+*{box-sizing:border-box}
+body{
+  margin:0;
+  font-family:system-ui,Arial;
+  background:#f9f9f9;
+  color:#222;
+}
+body.dark{
+  background:#121212;
+  color:#e0e0e0;
+}
+header{
+  background:#4CAF50;
+  color:#fff;
+  padding:15px 20px;
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+}
+button, input, select{
+  padding:8px;
+  border-radius:8px;
+  border:1px solid #ccc;
+}
+button{cursor:pointer}
+.container{
+  max-width:1100px;
+  margin:auto;
+  padding:16px;
+}
+.card{
+  background:#fff;
+  border-radius:12px;
+  padding:16px;
+  margin-bottom:16px;
+}
+body.dark .card{background:#1e1e1e}
+table{
+  width:100%;
+  border-collapse:collapse;
+  margin-top:10px;
+}
+th,td{
+  border:1px solid #ccc;
+  padding:8px;
+  text-align:center;
+}
+th{background:#4CAF50;color:#fff}
+</style>
 </head>
 
 <body>
+
 <header>
   <strong>Controle Financeiro</strong>
   <div>
@@ -30,50 +69,50 @@
 
 <div class="container">
 
-  <div class="card">
-    <label>Mês:</label>
-    <input type="month" id="mesSelecionado">
-    <label>Dinheiro guardado:</label>
-    <input type="number" id="dinheiroGuardado">
-  </div>
+<div class="card">
+  <label>Mês:</label>
+  <input type="month" id="mesSelecionado">
+  <label>Dinheiro guardado:</label>
+  <input type="number" id="dinheiroGuardado">
+</div>
 
-  <div class="card">
-    <h3>Entradas</h3>
-    <input id="valorReceita" type="number" placeholder="Valor">
-    <input id="fonteReceita" placeholder="Fonte">
-    <input id="dataReceita" type="date">
-    <button id="btnAddReceita">Adicionar</button>
-    <table id="tabelaReceitas">
-      <tbody></tbody>
-    </table>
-  </div>
+<div class="card">
+<h3>Entradas</h3>
+<input id="valorReceita" type="number" placeholder="Valor">
+<input id="fonteReceita" placeholder="Fonte">
+<input id="dataReceita" type="date">
+<button id="btnAddReceita">Adicionar</button>
+<table id="tabelaReceitas">
+<tbody></tbody>
+</table>
+</div>
 
-  <div class="card">
-    <h3>Despesas</h3>
-    <input id="valorDespesa" type="number" placeholder="Valor">
-    <input id="categoriaDespesa" placeholder="Categoria">
-    <input id="descricaoDespesa" placeholder="Descrição">
-    <input id="dataDespesa" type="date">
-    <button id="btnAddDespesa">Adicionar</button>
-    <table id="tabelaDespesas">
-      <tbody></tbody>
-    </table>
-  </div>
+<div class="card">
+<h3>Despesas</h3>
+<input id="valorDespesa" type="number" placeholder="Valor">
+<input id="categoriaDespesa" placeholder="Categoria">
+<input id="descricaoDespesa" placeholder="Descrição">
+<input id="dataDespesa" type="date">
+<button id="btnAddDespesa">Adicionar</button>
+<table id="tabelaDespesas">
+<tbody></tbody>
+</table>
+</div>
 
-  <div class="card">
-    <h3>Visualização</h3>
-    <select id="tipoVisualizacao">
-      <option value="tabela">📋 Tabela</option>
-      <option value="pizza">🍕 Pizza</option>
-      <option value="barras">📊 Barras</option>
-    </select>
-    <canvas id="grafico" height="200" style="display:none"></canvas>
-  </div>
+<div class="card">
+<h3>Visualização</h3>
+<select id="tipoVisualizacao">
+  <option value="tabela">📋 Tabela</option>
+  <option value="pizza">🍕 Pizza</option>
+  <option value="barras">📊 Barras</option>
+</select>
+<canvas id="grafico" height="200" style="display:none"></canvas>
+</div>
 
-  <div class="card">
-    <button id="btnSalvarMes">💾 Salvar mês</button>
-    <button id="btnLimparAtual">🧹 Limpar</button>
-  </div>
+<div class="card">
+<button id="btnSalvarMes">💾 Salvar mês</button>
+<button id="btnLimparAtual">🧹 Limpar</button>
+</div>
 
 </div>
 
