--- a/index.html
+++ b/index.html
@@ -7,52 +7,16 @@
 
 <style>
 *{box-sizing:border-box}
-body{
-  margin:0;
-  font-family:system-ui,Arial;
-  background:#f9f9f9;
-  color:#222;
-}
-body.dark{
-  background:#121212;
-  color:#e0e0e0;
-}
-header{
-  background:#4CAF50;
-  color:#fff;
-  padding:15px 20px;
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-}
-button, input, select{
-  padding:8px;
-  border-radius:8px;
-  border:1px solid #ccc;
-}
+body{margin:0;font-family:system-ui;background:#f9f9f9;color:#222}
+body.dark{background:#121212;color:#e0e0e0}
+header{background:#4CAF50;color:#fff;padding:15px 20px;display:flex;justify-content:space-between}
+button,input,select{padding:8px;border-radius:8px;border:1px solid #ccc}
 button{cursor:pointer}
-.container{
-  max-width:1100px;
-  margin:auto;
-  padding:16px;
-}
-.card{
-  background:#fff;
-  border-radius:12px;
-  padding:16px;
-  margin-bottom:16px;
-}
+.container{max-width:1100px;margin:auto;padding:16px}
+.card{background:#fff;border-radius:12px;padding:16px;margin-bottom:16px}
 body.dark .card{background:#1e1e1e}
-table{
-  width:100%;
-  border-collapse:collapse;
-  margin-top:10px;
-}
-th,td{
-  border:1px solid #ccc;
-  padding:8px;
-  text-align:center;
-}
+table{width:100%;border-collapse:collapse;margin-top:10px}
+th,td{border:1px solid #ccc;padding:8px;text-align:center}
 th{background:#4CAF50;color:#fff}
 </style>
 </head>
@@ -82,9 +46,7 @@ th{background:#4CAF50;color:#fff}
 <input id="fonteReceita" placeholder="Fonte">
 <input id="dataReceita" type="date">
 <button id="btnAddReceita">Adicionar</button>
-<table id="tabelaReceitas">
-<tbody></tbody>
-</table>
+<table id="tabelaReceitas"><tbody></tbody></table>
 </div>
 
 <div class="card">
@@ -94,9 +56,7 @@ th{background:#4CAF50;color:#fff}
 <input id="descricaoDespesa" placeholder="Descrição">
 <input id="dataDespesa" type="date">
 <button id="btnAddDespesa">Adicionar</button>
-<table id="tabelaDespesas">
-<tbody></tbody>
-</table>
+<table id="tabelaDespesas"><tbody></tbody></table>
 </div>
 
 <div class="card">
