--- a/index.html
+++ b/index.html
@@ -1,28 +1,109 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-<meta charset="UTF-8">
-<title>Controle Financeiro</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8">
+  <title>Controle Financeiro</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="manifest" href="manifest.json">
 
-<style>
-*{box-sizing:border-box}
-body{margin:0;font-family:system-ui;background:#f9f9f9;color:#222}
-body.dark{background:#121212;color:#e0e0e0}
-header{background:#4CAF50;color:#fff;padding:15px 20px;display:flex;justify-content:space-between}
-button,input,select{padding:8px;border-radius:8px;border:1px solid #ccc}
-button{cursor:pointer}
-.container{max-width:1100px;margin:auto;padding:16px}
-.card{background:#fff;border-radius:12px;padding:16px;margin-bottom:16px}
-body.dark .card{background:#1e1e1e}
-table{width:100%;border-collapse:collapse;margin-top:10px}
-th,td{border:1px solid #ccc;padding:8px;text-align:center}
-th{background:#4CAF50;color:#fff}
-</style>
+  <style>
+    :root {
+      --primary:#4CAF50;
+      --bg:#f5f5f5;
+      --card:#ffffff;
+      --text:#222;
+    }
+    body.dark {
+      --bg:#121212;
+      --card:#1e1e1e;
+      --text:#e0e0e0;
+    }
+
+    body {
+      margin:0;
+      font-family:system-ui, Arial;
+      background:var(--bg);
+      color:var(--text);
+    }
+
+    header {
+      background:var(--primary);
+      color:#fff;
+      padding:14px 20px;
+      display:flex;
+      justify-content:space-between;
+      align-items:center;
+    }
+
+    header button {
+      border:none;
+      background:#fff;
+      color:#333;
+      padding:6px 10px;
+      border-radius:8px;
+      font-weight:600;
+      cursor:pointer;
+    }
+
+    main {
+      max-width:900px;
+      margin:20px auto;
+      padding:0 14px;
+    }
+
+    .card {
+      background:var(--card);
+      border-radius:14px;
+      padding:16px;
+      margin-bottom:16px;
+    }
+
+    h2 { margin-top:0 }
+
+    .row {
+      display:flex;
+      gap:10px;
+      flex-wrap:wrap;
+    }
+
+    input, select, button {
+      padding:8px;
+      border-radius:8px;
+      border:1px solid #ccc;
+    }
+
+    button.primary {
+      background:var(--primary);
+      color:#fff;
+      border:none;
+      font-weight:600;
+    }
+
+    table {
+      width:100%;
+      border-collapse:collapse;
+      margin-top:10px;
+    }
+
+    th, td {
+      border:1px solid #ddd;
+      padding:6px;
+      text-align:center;
+    }
+
+    th {
+      background:var(--primary);
+      color:#fff;
+    }
+
+    canvas {
+      max-width:100%;
+      margin-top:20px;
+    }
+  </style>
 </head>
 
 <body>
-
 <header>
   <strong>Controle Financeiro</strong>
   <div>
@@ -31,52 +112,64 @@ th{background:#4CAF50;color:#fff}
   </div>
 </header>
 
-<div class="container">
+<main>
 
-<div class="card">
-  <label>Mês:</label>
-  <input type="month" id="mesSelecionado">
-  <label>Dinheiro guardado:</label>
-  <input type="number" id="dinheiroGuardado">
-</div>
+  <div class="card row">
+    <label>Mês:
+      <input type="month" id="mesSelecionado">
+    </label>
+    <label>Dinheiro guardado:
+      <input type="number" id="dinheiroGuardado">
+    </label>
+  </div>
 
-<div class="card">
-<h3>Entradas</h3>
-<input id="valorReceita" type="number" placeholder="Valor">
-<input id="fonteReceita" placeholder="Fonte">
-<input id="dataReceita" type="date">
-<button id="btnAddReceita">Adicionar</button>
-<table id="tabelaReceitas"><tbody></tbody></table>
-</div>
+  <div class="card">
+    <h2>Entradas</h2>
+    <div class="row">
+      <input id="valorReceita" type="number" placeholder="Valor">
+      <input id="fonteReceita" placeholder="Fonte">
+      <input id="dataReceita" type="date">
+      <button id="btnAddReceita" class="primary">Adicionar</button>
+    </div>
+    <table>
+      <thead><tr><th>Valor</th><th>Fonte</th><th>Data</th></tr></thead>
+      <tbody id="tbodyReceitas"></tbody>
+    </table>
+  </div>
 
-<div class="card">
-<h3>Despesas</h3>
-<input id="valorDespesa" type="number" placeholder="Valor">
-<input id="categoriaDespesa" placeholder="Categoria">
-<input id="descricaoDespesa" placeholder="Descrição">
-<input id="dataDespesa" type="date">
-<button id="btnAddDespesa">Adicionar</button>
-<table id="tabelaDespesas"><tbody></tbody></table>
-</div>
+  <div class="card">
+    <h2>Despesas</h2>
+    <div class="row">
+      <input id="valorDespesa" type="number" placeholder="Valor">
+      <input id="categoriaDespesa" placeholder="Categoria">
+      <input id="descricaoDespesa" placeholder="Descrição">
+      <input id="dataDespesa" type="date">
+      <button id="btnAddDespesa" class="primary">Adicionar</button>
+    </div>
+    <table>
+      <thead><tr><th>Valor</th><th>Categoria</th><th>Descrição</th><th>Data</th></tr></thead>
+      <tbody id="tbodyDespesas"></tbody>
+    </table>
+  </div>
 
-<div class="card">
-<h3>Visualização</h3>
-<select id="tipoVisualizacao">
-  <option value="tabela">📋 Tabela</option>
-  <option value="pizza">🍕 Pizza</option>
-  <option value="barras">📊 Barras</option>
-</select>
-<canvas id="grafico" height="200" style="display:none"></canvas>
-</div>
+  <div class="card">
+    <h2>Visualização</h2>
+    <select id="tipoGrafico">
+      <option value="nenhum">Tabela</option>
+      <option value="pizza">Pizza (Despesas)</option>
+      <option value="barra">Barras (Resumo)</option>
+    </select>
 
-<div class="card">
-<button id="btnSalvarMes">💾 Salvar mês</button>
-<button id="btnLimparAtual">🧹 Limpar</button>
-</div>
+    <canvas id="grafico"></canvas>
+  </div>
 
-</div>
+  <div class="card row">
+    <button id="btnSalvarMes" class="primary">💾 Salvar mês</button>
+    <button id="btnLimpar">🧹 Limpar</button>
+  </div>
 
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script src="js/index.js"></script>
+</main>
+
+<script src="js/script.js"></script>
 </body>
 </html>
