--- a/historico.html
+++ b/historico.html
@@ -1,40 +1,114 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-<meta charset="UTF-8">
-<title>Histórico Financeiro</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-body{margin:0;font-family:system-ui;background:#f9f9f9}
-body.dark{background:#121212;color:#e0e0e0}
-header{background:#4CAF50;color:#fff;padding:15px;display:flex;justify-content:space-between}
-.container{max-width:1100px;margin:auto;padding:16px}
-.card{background:#fff;padding:16px;border-radius:12px;margin-bottom:16px}
-body.dark .card{background:#1e1e1e}
-button{padding:8px;border-radius:8px;cursor:pointer}
-table{width:100%;border-collapse:collapse;margin-top:10px}
-th,td{border:1px solid #ccc;padding:8px;text-align:center}
-th{background:#4CAF50;color:#fff}
-</style>
+  <meta charset="UTF-8">
+  <title>Histórico Financeiro</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <style>
+    :root {
+      --primary:#4CAF50;
+      --bg:#f5f5f5;
+      --card:#ffffff;
+      --text:#222;
+      --danger:#e53935;
+    }
+
+    body.dark {
+      --bg:#121212;
+      --card:#1e1e1e;
+      --text:#e0e0e0;
+    }
+
+    body {
+      margin:0;
+      font-family:system-ui, Arial;
+      background:var(--bg);
+      color:var(--text);
+    }
+
+    header {
+      background:var(--primary);
+      color:#fff;
+      padding:14px 20px;
+      display:flex;
+      justify-content:space-between;
+      align-items:center;
+    }
+
+    header button {
+      border:none;
+      background:#fff;
+      color:#333;
+      padding:6px 10px;
+      border-radius:8px;
+      font-weight:600;
+      cursor:pointer;
+      margin-left:6px;
+    }
+
+    main {
+      max-width:900px;
+      margin:20px auto;
+      padding:0 14px;
+    }
+
+    .card {
+      background:var(--card);
+      border-radius:14px;
+      padding:16px;
+      margin-bottom:16px;
+    }
+
+    .summary {
+      display:grid;
+      grid-template-columns:repeat(auto-fit,minmax(120px,1fr));
+      gap:10px;
+    }
+
+    .danger {
+      background:var(--danger);
+      color:#fff;
+      border:none;
+      padding:8px 12px;
+      border-radius:8px;
+      cursor:pointer;
+    }
+
+    .edit {
+      background:var(--primary);
+      color:#fff;
+      border:none;
+      padding:8px 12px;
+      border-radius:8px;
+      cursor:pointer;
+    }
+
+    #vazio {
+      text-align:center;
+      opacity:.6;
+      margin-top:40px;
+    }
+  </style>
 </head>
 
 <body>
 <header>
-  <strong>Histórico</strong>
+  <strong>Histórico Financeiro</strong>
   <div>
-    <button id="btnLimparTudo">🧹 Limpar</button>
     <button id="btnVoltar">⬅ Voltar</button>
-    <button id="toggleTheme">🌙 Tema</button>
+    <button id="btnTema">🌙 Tema</button>
+    <button id="btnLimparTudo">🧹 Limpar tudo</button>
   </div>
 </header>
 
-<div class="container">
+<main>
   <div id="lista"></div>
-  <div id="vazio" style="display:none">Nenhum mês salvo.</div>
-</div>
+  <div id="vazio" style="display:none">
+    Nenhum mês salvo ainda.
+  </div>
+</main>
 
 <script src="js/historico.js"></script>
-
 </body>
 </html>
-
