--- a/index.html
+++ b/index.html
@@ -157,5 +157,19 @@ canvas{
 </main>
 
 <script src="js/script.js"></script>
+  <script>
+if ('serviceWorker' in navigator) {
+  window.addEventListener('load', () => {
+    navigator.serviceWorker.register('/service-worker.js')
+      .then(reg => {
+        console.log('Service Worker registrado:', reg.scope);
+      })
+      .catch(err => {
+        console.error('Erro ao registrar Service Worker:', err);
+      });
+  });
+}
+</script>
 </body>
 </html>
+
