--- a/index.html
+++ b/index.html
@@ -170,6 +170,48 @@ if ('serviceWorker' in navigator) {
   });
 }
 </script>
+  <script>
+if ('serviceWorker' in navigator) {
+  navigator.serviceWorker.register('/service-worker.js').then(reg => {
+
+    if (reg.waiting) showUpdate();
+
+    reg.addEventListener('updatefound', () => {
+      const newWorker = reg.installing;
+      newWorker.addEventListener('statechange', () => {
+        if (newWorker.state === 'installed' && navigator.serviceWorker.controller) {
+          showUpdate();
+        }
+      });
+    });
+
+    function showUpdate() {
+      const div = document.createElement('div');
+      div.style = `
+        position:fixed;
+        bottom:20px;
+        left:50%;
+        transform:translateX(-50%);
+        background:#4CAF50;
+        color:#fff;
+        padding:12px 16px;
+        border-radius:10px;
+        font-weight:600;
+        z-index:9999;
+        cursor:pointer;
+      `;
+      div.innerText = '🔄 Nova versão disponível — Atualizar';
+      div.onclick = () => {
+        reg.waiting.postMessage('SKIP_WAITING');
+        window.location.reload();
+      };
+      document.body.appendChild(div);
+    }
+  });
+}
+</script>
+
 </body>
 </html>
+
 
