--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
+<head><button id="btnInstall" style="display:none;">⬇️ Instalar App</button>
+
 <meta charset="UTF-8">
 <title>Controle Financeiro</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -280,6 +281,7 @@ if (isIOS && !isStandalone) {
 </script>
 </body>
 </html>
+
 
 
 
